@@ -1,5 +1,6 @@
 package io.github.interstell.cactus.backend.util;
 
+import io.github.interstell.cactus.backend.models.Event;
 import org.w3c.dom.Document;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
@@ -28,15 +29,20 @@ public class TomitaRunner {
         this.pathToExecutable = pathToExecutable;
     }
 
-    public String parse(String text) throws IOException, InterruptedException, ParserConfigurationException, SAXException {
+    public String parse(String text, Event event) throws IOException, InterruptedException, ParserConfigurationException, SAXException {
         File input = new File("C:\\Users\\Grigoriy\\Documents\\cactus\\tomita\\input.txt");
         File output = new File("C:\\Users\\Grigoriy\\Documents\\cactus\\tomita\\output.xml");
         FileOutputStream of = new FileOutputStream(input, false);
+        text = text.replaceAll("<br>"," ");
+        text = text.replaceAll("ул.","ул");
+        text = text.replaceAll("/","-");
         of.write(text.getBytes());
         of.close();
-     //   ProcessBuilder tomita_b = new ProcessBuilder(getPathToExecutable(),"config.proto");
-        Runtime.getRuntime().exec(getPathToExecutable()+" config.proto").waitFor();
-       // tomita_b.start().waitFor();
+        ProcessBuilder tomita_b = new ProcessBuilder("C:\\Users\\Grigoriy\\Documents\\cactus\\tomita\\wrapper.exe")
+                .directory(new File("C:\\Users\\Grigoriy\\Documents\\cactus\\tomita"));
+        tomita_b.start();
+        System.out.println(tomita_b.directory().getAbsoluteFile());
+        System.err.println(tomita_b);
 
         Document doc = DocumentBuilderFactory.newInstance().newDocumentBuilder().parse(output);
         doc.getDocumentElement().normalize();
@@ -48,9 +54,17 @@ public class TomitaRunner {
             Node fact  = facts.item(i);
             System.out.println(fact.getNodeName());
             switch (fact.getNodeName()){
-                case "Date": break;
-                case "Address" : break;
-                case "Price" : break;
+                case "Date":
+                    break;
+
+                case "Address" :
+                    Node val = fact.getFirstChild();
+                    event.setAddress(val.toString());
+                    break;
+                case "Price" :
+                    Node val1 = fact.getFirstChild();
+                    event.setPrice(val1.toString());
+                    break;
             }
         }
 
